# aws-ml-enablement-workshop

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  ml-handson.yml  pyproject.toml
.amazonq/cli-agents/: developer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  case-study.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: content.md  journal.md  pull_request_template.md
.kiro/settings/: mcp.json
docs/: ending.md  introduction.md  working_backwards_example.md
docs/journal/: README.md
docs/organizer/: README.md  day0.md  day0_v2.md  day1.md  day1_v2.md  day2.md  day3.md  faq.md  generative_ai_setup.md  guide.md  requirements.md  tasks.md  timetable.md
docs/presentations/: ML_Usecase_Discovery_Worksheet.xlsx
mock/: README.md
mock/prompt/: prompt.md
mock/template/: DEPLOYMENT_GUIDE.md  TRANCKER_INTEGRATION_GUIDE.md
notebooks/: 00_environment_setup.ipynb  00_template.ipynb  01_business_understanding.ipynb  02_analyze.ipynb  03_prepare.ipynb  04_preprocess.ipynb  05_train.ipynb  06_test.ipynb  environment_handson.yml
notebooks/scenario_churn/: README.md  customer_churn.ipynb  customer_churn_optional.ipynb  customer_churn_sagemaker.ipynb  environment.yml  policy_iam.json  policy_sagemaker.json
yourwork/: README.md
yourwork/discovery/: README.md  solutions.md
yourwork/prompt/: prompt.md
yourwork/template/: DEPLOYMENT_GUIDE.md
yourwork/tracker/: MLEWTrackerDeploymentStack.yaml  MLEWTrackerStack.yaml  README.md  package-lock.json  package.json
yourwork_1shot/: README.md
(+72 files in other folders)
