[project]
name = "aws-ml-enablement-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markitdown-mcp>=0.0.1a4",
    "mcp[cli]>=1.8.1",
    "pandas>=3.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.2.0",
    "click>=8.3.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
